corraçao imagem pokemon

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                         <span class="tipo">fogo</span>
 
                         <div class="cartao-imagem">
-                            <img src="/src/imagens/charmander.png" alt="imagem de Charmander">
+                            <img src="src/imagens/charmander.png" alt="imagem de Charmander">
                         </div>
                     </div>
                     <div class="cartao-informaçoes">
@@ -134,7 +134,7 @@
                         <span class="tipo">água</span>
 
                         <div class="cartao-imagem">
-                            <img src="/src/imagens/gyarados.png" alt="imagem de Gyarados">
+                            <img src="src/imagens/gyarados.png" alt="imagem de Gyarados">
                         </div>                   
                     </div>
                     <div class="cartao-informaçoes">
@@ -171,7 +171,7 @@
                         <span class="tipo">trevas</span>
 
                         <div class="cartao-imagem">
-                            <img src="/src/imagens/gengar.png" alt="imagem de Gengar">
+                            <img src="src/imagens/gengar.png" alt="imagem de Gengar">
                         </div>                      
                     </div>
                     <div class="cartao-informaçoes">
@@ -206,7 +206,7 @@
                         <span class="tipo">dragão</span>
 
                         <div class="cartao-imagem">
-                            <img src="/src/imagens/dragonite.png" alt="imagem de Dragonite">
+                            <img src="src/imagens/dragonite.png" alt="imagem de Dragonite">
                         </div>      
                     </div>
                     <div class="cartao-informaçoes">
